--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,17 @@ __pycache__/
 
 # Temporary files
 *.tmp
-*.temp 
+*.temp
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local 
